--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Header-->
 		<!logo-->
 		<a href="https://imraju2304.github.io/Bihar-Travel-Blog.github.io/.">
-		<img src="C:\Users\91987\Pictures\images\bihar_logo.jpg" height="700" width="100%">
+		<img src="img/bihar_logo.jpg" height="700" width="100%">
 	</a>
 		
 		<!--Website link-->
