--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 
 	<!-- Header-->
 		<!logo-->
-		<a href="https://imraju2304.github.io/Bihar-Travel-Blog.github.io/.">
+		<a href="https://imraju2304.github.io/Bihar_Travel.github.io/.">
 		<img src="imgages/bihar_logo.jpg" height="700" width="100%">
 	</a>
 		
 		<!--Website link-->
 	<h2> 
-		<a href ="https://imraju2304.github.io/Bihar-Travel-Blog.github.io/.">
+		<a href ="https://imraju2304.github.io/Bihar_Travel.github.io/.">
 		Bihar-Travel</a>
 	</h2>
 	<!-- Header image-->
-	<img src="C:\Users\91987\Pictures\images\Tourist-Places-in-Bihar.jpg"height="700" width="100%">
+	<img src="imgages/Tourist-Places-in-Bihar.jpg"height="700" width="100%">
 	<!-- Main -->
 	<!-- Blog Heading -->
 	<h1> Travel Guide To Bihar - Everything You Need To Know </h1>
 
 	<!-- Blog Image -->
-<p align="centre"><img src = "C:\Users\91987\Pictures\images\Mahabodhitemple.jpg" height="600" width="100%"></p>
+<p align="centre"><img src = "images/Mahabodhitemple.jpg" height="600" width="100%"></p>
 	<!-- Content -->
 	<!-- Paragraph 1 -->
 	<p>
@@ -77,7 +77,7 @@ Months between July and September are said to be the monsoon months in Bihar and
 		<li>
 			<h4>Shopping </h4>
 			<!-- Blog image-->
-			<img src="C:\Users\91987\Pictures\images\maklsj.jpg" height="600" width="100%">
+			<img src="images/maklsj.jpg" height="600" width="100%">
 				<p>
 					No matter what destination you are visiting, shopping a place on your itinerary. In Bihar, you have a lot of shopping places where you can buy the best souvenirs. Right from Woodwork to Madhubani paintings to silk sarees, you can get everything here at a reasonable price.
 				</p>
@@ -88,7 +88,7 @@ Months between July and September are said to be the monsoon months in Bihar and
 				<p>
 			<h4> Visit the painting hub </h4>
 			<!-- Blog image-->
-			<img src="C:\Users\91987\Pictures\images\images.jpg" height="700" width="100%">
+			<img src="C:images/images.jpg" height="700" width="100%">
 
 
 Madhubani painting has become synonymous with art and craft of Bihar in the whole world.
@@ -105,8 +105,8 @@ The process of painting and the use of natural dyes and pigments provide an eye-
 		<li>
 			<h4> Try an adventure </h4>
 			<!-- Blog image-->
-			<img src="C:\Users\91987\Pictures\
-			images\Untitled-2020-12-21T112739.714-1170x585.jpg" height="700" width="100%">
+			<img src="
+			images/Untitled-2020-12-21T112739.714-1170x585.jpg" height="700" width="100%">
 				<p>
 					If you are an adventure lover, then Bihar has something for you. Be it the land sports or water sports, you will absolutely have a thrilling experience here. Some of the activities that you can try the hot springs could have been a very good place as the warm water gives a real relaxing feeling and river rafting in ganaga river and many more. While you are visiting bihar, do not miss to try an adventure, as this is an experience for a lifetime.
 				</p>
@@ -160,14 +160,14 @@ https://www.google.com/search?ei=zGseYPGGLNON4-EPgOmQmAc&q=rajgir+mela&oq=raj&gs
 
 		<h3> Chatth Puja </h3>
 <!-- Blog image-->
-			<img src="C:\Users\91987\Pictures\images\Chhath_puja_udit.jpg" height="700" width="100%">
+			<img src="images/Chhath_puja_udit.jpg" height="700" width="100%">
 				
 	<p>
 		This is probably the most famous festival of this State. When one hears Chatth Puja, Bihar instantly comes to the mind. This is an actually an ancient Hindu festival which is dedicated to the Sun God, Surya, and take place 6 days after Diwali. It is an expression of thanks giving and seeking blessings from the Almighty for sustaining life on Earth. During this festival, the person observing Chatth, also known as Parvati, observes a fast from dawn to dusk which concludes with sweets. This fast is followed by another fast for 36 hours till the final day, when puja starts at the river, before sunrise. You can witness thousands of devotees and the river during this time. Witnessing Chatth Puja will let you witness the devotion in its true sense.
 	</p>
 <h3> Shravani Mela  </h3>
 <!-- Blog image-->
-			<img src="C:\Users\91987\Pictures\images\Shravani-Mela.jpg" height="700" width="100%">
+			<img src="images/Shravani-Mela.jpg" height="700" width="100%">
 
 	<p>
 
@@ -176,21 +176,21 @@ https://www.google.com/search?ei=zGseYPGGLNON4-EPgOmQmAc&q=rajgir+mela&oq=raj&gs
 
 <h3> Sonepur Cattle Fair   </h3>
 <!-- Blog image-->
-					<img src="C:\Users\91987\Pictures\images\sonepur-mela-patna.jpg" height="700" width="100%">
+					<img src="images/sonepur-mela-patna.jpg" height="700" width="100%">
 <p>
 	This fair of Bihar has its root in ancient mythology and folklore. The Sonepur Cattle fair is the Asia’s largest cattle fair which takes place in the town of Sonepur in Bihar. It is held on Kartik Purnima that is the first full moon after the festival of Diwali. In this fair, domestic cattle like an elephant, camel, sheep and birds are brought in from around the country and sold here. Apart from this, varied handicrafts and handloom stalls are also put up, along with the magic show and folk dances. This fair attracts a large number of foreign tourists each year.
 </p>
 
 <h3> Makar Sankranti Mela   </h3>
 <!-- Blog image-->
-					<img src="C:\Users\91987\Pictures\images\Makar-Sankranti.jpg" height="700" width="100%">
+					<img src="images/Makar-Sankranti.jpg" height="700" width="100%">
 <p>
 	The Makar Sankranti Mela is held every year at Rajgir (a town in Bihar) in the month of January. The devotees make flower offering to the deities in the temple and take a dip in the holy water. Another site associated with this festival is the Mandar Hills in the Banka district. According to legends, a great Asura once threatened the gods. The Lord Vishnu cut off the Asura’s head and piled up the body under the weight of the Mandar hill. The famous panchjanya – the sankh (conch shell) used in the Mahabharat war is believed to have been found here on the hills. This makes it a rather famous festival of the state.
 </p>
 
 <h3> Rajgir Mahotsav   </h3>
 <!-- Blog image-->
-					<img src="C:\Users\91987\Pictures\images\Rajgir-Dance-Festival-Rajgir-Bihar-India_1525261170e.jpg" height="700" width="100%">
+					<img src="images/Rajgir-Dance-Festival-Rajgir-Bihar-India_1525261170e.jpg" height="700" width="100%">
 <p>
 Rajgir is the ancient capital of the Magadhan Empire in Bihar and is held sacred by both Jains and Buddhists because of its long association with Buddha and Mahavira. A Rajgir Mahotsav is held every year by the Department of Tourism, Bihar. It is a colourful festival of dance and music. A complete serene atmosphere is created here with the instrumental music, devotional songs, opera, folk dance, ballet and other dance and art forms. This festival held in the last week of October attracts a large number of tourists from around the world.
 
@@ -214,7 +214,7 @@ Wondering where to visit on your trip to Bihar? You have got a lot of options. T
 				</ol>
 
 				<h2> Patna   </h2>
-<img src="C:\Users\91987\Pictures\images\patna-buddha-smriti-park.jpg" height="700" width="100%">
+<img src="images/patna-buddha-smriti-park.jpg" height="700" width="100%">
 				patna-buddha-smriti-park
 <p>
 	Patna, the capital city of Bihar.Situated on the southern bank of Ganga, Patna is the largest city of Bihar. Better known as Patliputra in ancient India, the city is also believed to be the one of the oldest continuously inhabited cities in the world. Patna is a pilgrimage for Sikh devotees as it is reckoned to be the birthplace of last Sikh Guru, Guru Gobind Singh. The city flourished in the period of Haryanka, Nanda, Mauryan, Shunga, Gupta and Pala earned fame all across India. Today’s Patna is a developing city, which is endeavouring to match up to the modernization; malls, high-end hotels and theatres have cropped in the city. However, Patna has to speed up a bit to become the part of other cosmopolitans. Altogether, Patna is a decent destination, with most of the modern facilities available.
@@ -288,7 +288,7 @@ https://www.google.com/search?ei=l3EeYKezK8mw9QPY07HgDQ&q=Takht+Sri+Patna+Sahib&
 				</p>
 
 <h2> Sasaram   </h2>
-<img src="C:\Users\91987\Pictures\images\sher-shah-suri-tomb-sasaram.jpg" height="700" width="100%">
+<img src="images/sher-shah-suri-tomb-sasaram.jpg" height="700" width="100%">
 
 <p>
 	Sasaram in Rohtas district of Bihar is a small town, 148 km from Patna. Traditionally it is believed to be named after , the sage Parashurama and the legendary King Sahatrabahu. Sasaram was also the birth place of Sher Shah Suri, who ruled Delhi from 1540 to 1545 AD. It is well known for the mausoleums built during his regime. The Grand Trunk road, the most notable feature of Sher Shah Suri’s achievements, goes through Sasaram. The place is notably sought after for the beautifully sculpted tombs of Sher Shah Suri, his father and the architect who designed the monuments. These historic structures stand as mute testaments of the glory of a bygone era. Today apart from the historic significance, Sasaram has a thriving stone mining industry and is famous for the quality stone chips that are supplied all over India.
@@ -338,7 +338,7 @@ https://www.google.com/search?q=dhua+khund+sasaram&tbm=isch&ved=2ahUKEwjH7J7rjdX
 				</p>
 
 				<h2> Nalanda </h2>
-<img src="C:\Users\91987\Pictures\images\nalanda-bihar.jpg" height="700" width="100%">
+<img src="images/nalanda-bihar.jpg" height="700" width="100%">
 				nalanda-bihar
 				<p>
 					Probably the oldest university in India, Nalanda is an important site to visit in Bihar. A perfect reminisce to the time of flourishing Gupta and Pala period, Nalanda is an acclaimed tourist attraction in Bihar. It is believed that the last and most famous Jain Tirthankara, Mahavira spent 14 monsoon seasons here. Even, Buddha is said to have delivered lectures near the mango grove in Nalanda. The fame of this education centre was to an extent that Hieun Tsang, the famous Chinese traveller visited here and stayed for atleast two years here. Even, I-tsing another famous Chinese voyager stayed at Nalanda for about 10 years, AND such was the glory of this place. Today most parts of Nalanda lie in ruins but the place is surely worth exploring!
@@ -382,14 +382,14 @@ https://www.google.com/search?q=Rajgir+Dance+Festival+%28+in+October%29&source=l
 
 				<h2> Vishwa Shanti Stupa, Rajgir </h2>
 
-				<img src="C:\Users\91987\Pictures\
-				images\vishwa-shanti-stupa-rajgir.jpg" height="700" width="100%">
+				<img src="
+				images/vishwa-shanti-stupa-rajgir.jpg" height="700" width="100%">
 				<p>
 					Better known as the World Peace Pagoda, Vishwa Shanti Stupa proudly stand at the historic city of Rajgir. It is one of the 7 Peace Pagodas built in India and is certainly a must visit in Bihar. The pagoda was built in 1969 to spread the message of peace and non-violence. Marked by four statues of Buddha that reflects four important phases of Buddha’s life – birth, enlightenment, teaching and death, this Peace Pagoda is amongst the finest examples of Japanese architecture in India.
 				</p>
 				<h2> Gaya</h2>
 
-				<img src="C:\Users\91987\Pictures\images\gaya-bihar.jpg" height="700" width="100%">
+				<img src="images/gaya-bihar.jpg" height="700" width="100%">
 				<p> 
 Amongst the most famous places in Bihar is Gaya, which is a Hindu pilgrimage hub and a transit point for Buddhist pilgrimage centre of Bodhgaya. It is believed that it was here under the tree that Buddha attained enlightenment. Gaya is a busy city situated on the bank of River Phalgu and it is replete with many temples and historic sites dating back to different eras that stand as the evidence to the successful rule of Maurya and Gupta dynasty here. The glory of Gaya was extended so much so that even Hiuen Tsang could not resist mentioning it in his travelogues.
 				</p>
@@ -432,14 +432,14 @@ https://www.google.com/search?q=Muchalinda+Lake&tbm=isch&ved=2ahUKEwj62JC6ktXuAh
 				</ul>
 
 				<h2> Kanwar Lake Bird Sanctuary, Begusarai </h2>
-<img src="C:\Users\91987\Pictures\images\kanwar-lake-bird-sanctuary.jpg" height="700" width="100%">
+<img src="images/kanwar-lake-bird-sanctuary.jpg" height="700" width="100%">
 				
 				<p>
 					Kanwar Lake is India’s largest freshwater Oxbow lake. Situated in Begusarai, Kanwar Lake Bird Sanctuary is reckoned to be the haven for 60 species of migratory birds. Unfortunately, this place is losing its importance due negligence, in a Wetland Governance in South Asia, held in Delhi in 2014, the condition of this wetland ecosystem was discussed. We hope that some careful steps are taken for this bird sanctuary that has been a home to many birds both domestic and migratory.
 				</p>
 
 				<h2> Barabar Caves, Sultanpur </h2>
-<img src="C:\Users\91987\Pictures\images\barabar-cave.jpg" height="700" width="100%">
+<img src="images/barabar-cave.jpg" height="700" width="100%">
 
 				<p>
 					Barabar Caves claim to be the oldest rock-cut caves in India. Dating back to Mauryan Empire, these majestic caves are certainly one of the best places to see in Bihar. Situated on twin hills – Barabar and Nagarjuni, the caves are said to be used by Ajivika sect, however, many traces of Buddhist and Jain art can be found here. Barabar Hills consists of 4 caves, whereas Nagarjuni Hills have 3 caves, each of the cave are well-polished and have articulate designs and inscriptions over its walls and ceilings.
