--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Header-->
 		<!logo-->
 		<a href="https://imraju2304.github.io/Bihar_Travel.github.io/.">
-		<img src="imgages/bihar_logo.jpg" height="700" width="100%">
+		<img src="images/bihar_logo.jpg" height="700" width="100%">
 	</a>
 		
 		<!--Website link-->
@@ -24,7 +24,7 @@
 		Bihar-Travel</a>
 	</h2>
 	<!-- Header image-->
-	<img src="imgages/Tourist-Places-in-Bihar.jpg"height="700" width="100%">
+	<img src="images/Tourist-Places-in-Bihar.jpg"height="700" width="100%">
 	<!-- Main -->
 	<!-- Blog Heading -->
 	<h1> Travel Guide To Bihar - Everything You Need To Know </h1>
@@ -88,7 +88,7 @@ Months between July and September are said to be the monsoon months in Bihar and
 				<p>
 			<h4> Visit the painting hub </h4>
 			<!-- Blog image-->
-			<img src="C:images/images.jpg" height="700" width="100%">
+			<img src="images/images.jpg" height="700" width="100%">
 
 
 Madhubani painting has become synonymous with art and craft of Bihar in the whole world.
